--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,10 @@ dependencies:
   flutter_svg: ^1.0.3
   mime: ^1.0.1
   carousel_slider: ^4.0.0
+  cached_network_image: ^3.2.0
 
   flutter_form_builder: ^7.1.0
   form_builder_file_picker: ^2.0.0
-  # file_picker: ^4.3.3
   flutter_awesome_select: ^6.0.1
 
   http: ^0.13.4
