--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,10 +72,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/users.json
-    - assets/images/img_1.png
-    - assets/images/img_2.png
-    - assets/images/img_3.png
+    - assets/images/placeholder.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
