--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/placeholder.png
+    - assets/images/errors/no_connection.png
+    - assets/images/errors/403.png
+    - assets/images/errors/500.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -86,6 +89,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
+    - family: AppIcons
+      fonts:
+        - asset: assets/fonts/AppIcons/font.ttf
+
     - family: Oswald
       fonts:
         - asset: assets/fonts/Oswald/Regular.ttf
