--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,14 +33,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^1.0.3
   mime: ^1.0.1
-  carousel_slider: ^4.0.0
+  flutter_svg: ^1.0.3
   cached_network_image: ^3.2.0
-
-  flutter_form_builder: ^7.1.0
-  form_builder_file_picker: ^2.0.0
-  flutter_awesome_select: ^6.0.1
 
   http: ^0.13.4
   flutter_bloc: ^8.0.1
@@ -48,6 +43,12 @@ dependencies:
   path_provider: ^2.0.8
   shared_preferences: ^2.0.12
   flutter_secure_storage: ^5.0.2
+
+  flutter_form_builder: ^7.1.0
+  form_builder_file_picker: ^2.0.0
+  
+  carousel_slider: ^4.0.0
+  flutter_slidable: ^1.2.0
 
 dev_dependencies:
   flutter_test:
