--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -37,6 +40,7 @@ dependencies:
   flutter_svg: ^1.0.3
   cached_network_image: ^3.2.0
 
+  intl: ^0.17.0
   http: ^0.13.4
   flutter_bloc: ^8.0.1
 
