--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,10 +77,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/placeholder.png
-    - assets/images/errors/no_connection.png
-    - assets/images/errors/403.png
-    - assets/images/errors/500.png
+    - assets/images/
+    - assets/images/errors/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
