--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   cached_network_image: ^3.2.0
 
   intl: ^0.17.0
-  http: ^0.13.4
+  # http: ^0.13.4
+  dio: ^4.0.4
   flutter_bloc: ^8.0.1
 
   path_provider: ^2.0.8
